# amlproject

./: .gitignore  INFO.md  README.md  instructions.md  main.py  pyproject.toml
configs/: default.yaml
notebooks/: experiments.ipynb  experiments_local.ipynb
scripts/: run_all_experiments.py  train_centralized.py  train_federated.py  train_federated_sparse.py
src/: __init__.py
src/data/: __init__.py  dataset.py  sharding.py
src/models/: __init__.py  dino_vit.py
src/optimizers/: __init__.py  fisher.py  sparse_sgdm.py
src/training/: __init__.py  base.py  centralized.py  federated.py  federated_sparse.py
src/utils/: __init__.py  checkpointing.py  early_stopping.py  logging.py  metrics.py  seed.py  visualization.py
